Increase Hambridge to Burrow threshold by 5cm to 7.70m

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <footer>
         Feedback: <a href="mailto:b@bede.im">b@bede.im</a> | 
-        <a href="https://check-for-flooding.service.gov.uk/station/3379">data</a> | <a href="https://check-for-flooding.service.gov.uk/target-area/112WAFYPM">flood alert</a>
+        <a href="https://check-for-flooding.service.gov.uk/station/3379">data</a> | <a href="https://check-for-flooding.service.gov.uk/target-area/112WAFYPM">flood alert</a> | <a href="https://github.com/bede/levelslevels/commits/main/">changelog</a>
     </footer>
 
     <script>
@@ -227,7 +227,7 @@
                 roads: [
                     {
                         name: "Hambridge to Burrow",
-                        amberThreshold: 7.65,
+                        amberThreshold: 7.70,
                         link: "",
                         markerPosition: [50.9856215, -2.8500948]
                     }
