All clear message formatting

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 li.appendChild(circle);
 
                 const text = document.createElement('span');
-                text.innerHTML = `All clear (but check <a href="https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates">Langport gate status</a>)`;
+                text.innerHTML = `All routes clear (but check <a href="https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates">gate status</a>)`;
                 li.appendChild(text);
 
                 routeStatusList.appendChild(li);
