Include all in overlay

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 ],
                 thresholds: [
                 ],
-                showOnOverlay: false
+                showOnOverlay: true
             },
             {
                 name: "Isle at Midelney",
@@ -281,7 +281,7 @@
                 thresholds: [
                     { name: "Top of normal range", value: 8.21 }
                 ],
-                showOnOverlay: false
+                showOnOverlay: true
             }
         ];
 
