Try to avoid linebreaks

--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
     </div>
 
     <footer>
-        <a href="mailto:b@bede.im">feedback</a> | 
-        <a href="https://github.com/bede/levelslevels">code</a> | <a href="https://github.com/bede/levelslevels/commits/main/">changelog</a> | <a href="https://check-for-flooding.service.gov.uk/target-area/112WAFYPM">flood alert</a> | <a href="https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates/">gate status</a>
+        <a href="mailto:b@bede.im">feedback</a> | <a href="https://github.com/bede/levelslevels/commits/main/">changelog</a> | <a href="https://check-for-flooding.service.gov.uk/target-area/112WAFYPM">flood alert</a> | <a href="https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates/">gate status</a>
     </footer>
 
     <script>
@@ -212,7 +211,7 @@
                         markerPosition: [51.0266797, -2.8174208],
                         manualStatus: {
                             override: true,
-                            suffix: "gate closed"
+                            suffix: "gate shut"
                         }
                     },
                     {
