--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <footer>
         <a href="mailto:b@bede.im">feedback</a> | <a href="https://github.com/bede/levelslevels/commits/main/">changelog</a> | <a href="https://check-for-flooding.service.gov.uk/target-area/112WAFYPM">flood alert</a> | <a href="https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates/">gate status</a><br>
-        <small>Flood depths are predictions and may be inaccurate. Please <a href="mailto:b@bede.im">report</a> poor predictions.</small>
+        <small>Predicted flood depths may be inaccurate. Please <a href="mailto:b@bede.im">report</a> poor predictions.</small>
     </footer>
 
     <script>
@@ -538,7 +538,8 @@
 
             const layout = {
                 xaxis: {
-                    tickformat: "%Y-%m-%d",
+                    tickformat: "%A",
+                    hoverformat: "%a %H:%M",
                     showgrid: true,
                     title: "",
                     tickfont: { family: "Inter, sans-serif", size: 11 },
