Langport Muchelney gate unofficially opened, route passable

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         link: "https://www.somerset.gov.uk/roads-travel-and-parking/emergency-road-closure-gates/",
                         markerPosition: [51.0266797, -2.8174208],
                         manualStatus: {
-                            override: true,
+                            override: false,
                             suffix: "gate shut"
                         }
                     },
