Hide normal range thresholds

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     }
                 ],
                 thresholds: [
-                    { name: "Top of normal range", value: 7.06 }
+                    // { name: "Top of normal range", value: 7.06 }
                 ],
                 showOnOverlay: true
             },
@@ -298,7 +298,7 @@
                     }
                 ],
                 thresholds: [
-                    { name: "Top of normal range", value: 6.645 }
+                    // { name: "Top of normal range", value: 6.645 }
                 ],
                 showOnOverlay: true
             },
@@ -333,7 +333,7 @@
                     }
                 ],
                 thresholds: [
-                    { name: "Top of normal range", value: 8.21 }
+                    // { name: "Top of normal range", value: 8.21 }
                 ],
                 showOnOverlay: true
             }
